--- a/_posts/2018-03-20-silly-man.md
+++ b/_posts/2018-03-20-silly-man.md
@@ -6,4 +6,4 @@ subtitle: alan partridge - air guitar
 tags: [sillymen, comedy]
 ---
 
-{% 640 ZRk9nwvVH20 width 480 %}
+{% tag ZRk9nwvVH20 640 480 %}
