--- a/_posts/2018-03-20-silly-man.md
+++ b/_posts/2018-03-20-silly-man.md
@@ -6,4 +6,4 @@ subtitle: alan partridge - air guitar
 tags: [sillymen, comedy]
 ---
 
-<div>{{% tag ZRk9nwvVH20 640 480 %}}</div>
+<div>{% tag ZRk9nwvVH20 640 480 %}</div>
