--- a/_posts/2018-03-20-silly-man.md
+++ b/_posts/2018-03-20-silly-man.md
@@ -4,6 +4,7 @@ title: silly man
 image: /img/alan.png
 subtitle: alan partridge - air guitar
 tags: [sillymen, comedy]
+video: ZRk9nwvVH20
 ---
 
-<div>{% tag ZRk9nwvVH20 640 480 %}</div>
+#### silly man plkaying air guitar
